# cibozer-latest

./: .before_metrics  .coverage  .coveragerc  .dockerignore  .env.development  .env.example  .env.template  .env_commands  .gitignore  .launch_progress.json  .pre-commit-config.yaml  =1.1.0  =2.5.0  APEX_CHANGELOG.md  APEX_CONFIG.md  APEX_ITERATION_FLOW.md  APEX_README.md  APEX_SIMPLE_README.md  APEX_TRACKING_UPDATES.md  API_DOCUMENTATION.md  BASELINES.md  BULLETPROOFING_REPORT.md  BULLETPROOF_PROMPT.md  BUSINESS_MODEL.md  CIBOZER_BODY_OF_KNOWLEDGE.md  CLAUDE.md  COMPREHENSIVE_EXPERT_AUDIT_SUMMARY.md  CONTRIBUTING.md  CRITICAL_FIXES_APPLIED.md  CRITICAL_FIXES_SESSION2.md  CRITICAL_FIXES_SESSION3.md  CRITICAL_FIXES_SESSION4.md  CRITICAL_FIXES_SESSION5.md  CRITICAL_PERMUTATION_TEST_REPORT.md  CEmpireCibozerPRODUCT_VISION.md  DEPLOYMENT_CONFIG.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STEPS.md  DEPLOYMENT_UPDATE.md  DEPLOY_NOW.md  (+270 more)
.agent_sessions/: cibozer_context.json  cibozer_sessions.json
.apex/: CHANGES.md
.apex_simple/: history.json  iteration_004.md  iteration_009.md  iteration_011.md  iteration_013.md  iteration_016.md  iteration_017.md  iteration_018.md  iteration_019.md
.claude/: settings.local.json
.sprint/: current_sprint.json  last_focused_sprint.json  last_sprint_summary.md  mvp_tracker.json  next_commit.txt  recommendations.json  sprint_003.json  sprint_004.json  sprint_005.json  sprint_history.json
agents/: ONE_COMMAND.md  QUICK_COMMANDS.md  ZERO_INPUT.md  agent_commands.py  agent_orchestrator.py  autonomous_agent.py  do.py  project_analyzer_agent.py  run_agents.py  saas_team_agents.py  self_directed_system.py  session_manager.py  use_agents.py  work.py  work_live.py  work_verbose.py  work_verbose_always.bat
app/: __init__.py  extensions.py
archived_apex/: apex_simple.py
audit_reports/: 01_registered_dietitian_audit.md  02_clinical_nutritionist_audit.md  03_sports_nutritionist_audit.md  04_python_backend_audit.md  05_video_processing_audit.md  06_devops_audit.md  07_security_audit.md  08_youtube_growth_audit.md  09_ux_ui_audit.md  10_health_claims_attorney_audit.md  DATABASE_ARCHITECTURE_AUDIT.md
cibozer_output/: cibozer_vegan_2000_highprotein_3plus2_20250704_plan.json  generation_report.txt
config/: __init__.py  default.py  development.py  environments.py  production.py  testing.py
docs/: README.md  TESTING_STANDARDS.md  api.md  openapi.json
migrations/: add_performance_indexes.py
nginx/: nginx.conf  proxy_params
scripts/: README.md  add_gamification.py  add_goal_tracking.py  add_security_features.py  apex_track.sh  apex_verify_tracking.sh  backup_manager.py  backup_restore.py  blue_green_deploy.py  business_continuity_manager.py  calculate_coverage.py  check_cicd.py  check_db.py  check_environments.py  check_load_test_results.py  check_postgres.py  check_test_coverage.py  check_test_coverage_fast.py  clear_cache.py  code_quality_analyzer.py  coverage_results.json  create_admin.py  database_backup.py  database_fix.py  deploy.py  deploy_simple.py  deploy_to_production.py  docker_helpers.py  failover.py  generate_api_docs.py  generate_tests.py  health_check.py  implement_onboarding.py  init_production_database.py  measure_performance.py  migrate_to_postgres.py  migrate_to_postgresql.py  monitor_logs.py  optimize_performance.py  performance_optimizer.py  (+19 more)
static/: sw.js  test.html
templates/: 404.html  500.html  about.html  base.html  base_production.html  create.html  create_backup.html.old  create_clean.html  create_clean.html.old  create_new.html  dashboard.html  debug_415.html  emergency_test.html  error.html  index.html  logs.html  minimal_test.html  my_shares.html  offline.html  onboarding.html  share_password.html  test.html  view_shared_plan.html
tests/: TEST_PATTERNS.md  __init__.py  conftest.py  database_utils.py  shared_fixtures.py  test_add_admin_credits.py  test_admin.py  test_admin_login.py  test_api_integration.py  test_app.py  (+81 more)
(+152 files in other folders)
